--- a/webservice/.settings/org.eclipse.wst.common.component
+++ b/webservice/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,8 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <property name="java-output-path" value="/webservice/target/classes"/>
-        <property name="context-root" value="api"/>
+        <property name="context-root" value="wbd"/>
     </wb-module>
 </project-modules>
